--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -9,6 +11,7 @@ body {
   font-family: Verdana, sans-serif;
   font-size: 1rem;
   line-height: 1.8rem;
+  font-family: Kiwi Maru, sans-serif;
 }
 
 .container {
@@ -25,6 +28,8 @@ body {
   background: whitesmoke;
   height: 100vh;
   width: 100vw;
+  position: fixed;
+  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,13 +52,23 @@ body {
   right: 0;
   width: 100%;
   height: 60px;
+  z-index: -1;
+}
 
+.clickable {
+  color: rgb(255, 1, 1);
+  cursor: pointer;
+  user-select: none;
+}
+
+.clickable:hover {
+  color: rgb(200, 0, 0);
 }
 
 
 /* Images Container */
 .images-container {
-
+  width: 800px;
   margin-top: 50px;
 }
 
@@ -69,7 +84,11 @@ body {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-
+.card-img-top {
+  width: 100%;
+  height: auto;
+  border-radius: 5px 5px 0 0;
+}
 
 .card-body {
   padding: 20px;
@@ -104,13 +123,18 @@ body {
   body {
     line-height: 1.4rem;
     font-size: 0.9rem;
-
+    text-align: justify;
   }
 
+  .images-container {
+    width: 100%;
+  }
 
   .card-title {
     font-size: 20px;
   }
 
-  
+  .save-confirmed {
+    right: 25px;
+  }
 }
